08-database-management-and-modeling/infra/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          # image: hudaprasetyo/auth
          # image: asia-southeast2-c-docker.pkg.dev/ticketing-dev-437203/hudaprasetyo/auth
          image: asia.gcr.io/ticketing-dev-437203/auth
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
